<resources>
    <string name="app_name">Sembahyang</string>
    <string name="al_quran">Al-Quran</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="surah_al_quran">Surah Al-Quran</string>
    <string name="arabic">Arabic</string>
    <string name="alquran_diturunkan">Makkah</string>
    <string name="jumlah_ayat">%s Ayat</string>
    <string name="alquran">Alquran</string>
    <string name="button_back">Button Back</string>


    <string name="sholat_subuh">Subuh</string>
    <string name="sholat_dzuhur">Dzuhur</string>
    <string name="sholat_ashar">Ashar</string>
    <string name="sholat_maghrib">Maghrib</string>
    <string name="sholat_isya">Isya</string>
    <string name="waktu_sholat">05:00</string>
    <string name="wib">WIB</string>
    <string name="date_sholat">11 November 2021</string>
    <string name="jadwal_waktu_sholat">Jadwal Waktu Sholat</string>
    <string name="border">Border</string>
    <string name="tempat_turun">Mekkah</string>
    <string name="ayat_doa">Ayat Doa</string>
    <string name="terjemahan">Terjemahan</string>
    <string name="nama_doa">Nama Doa</string>
    <string name="doa_doa_harian">Doa Doa Harian</string>

</resources>