<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_surah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:padding="8dp"
    android:background="@drawable/ic_bg_border"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_bg_nomor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="1"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surah_al_quran"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alquran_diturunkan"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_surah" />

    <TextView
        android:id="@+id/tv_jml_ayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_ayat"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_keterangan"
        app:layout_constraintTop_toBottomOf="@id/tv_surah" />
    <TextView
        android:id="@+id/tv_arabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arabic"
        android:textColor="@color/vegas_gold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>